fixed alignment of blog section

--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -64,8 +64,8 @@
     align-items: end;
     position: relative;
     top: -230px;
-    right: 15px;
-    
+    right: 10px;
+    // overflow: hidden;
 }
 
 // mission statement article
