--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -11,6 +11,7 @@
 
     .mission-comments-form {
         top: -80px;  
+        right: 0;
         width: 100%;
         align-items: center;
  
